--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 server.port = 8080
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5432/greenway_bank_db
+spring.datasource.username=postgres
+spring.datasource.password=1111
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
